Amendments to badge, expanded badge & scales page to ensure theyre aligned

--- a/assets/scss/partials/risk/_expanded-predictor-badge.scss
+++ b/assets/scss/partials/risk/_expanded-predictor-badge.scss
@@ -41,7 +41,7 @@ $low-score-colour__text: #485b10;
 
     background-color: $secondary-colour;
 
-    padding: 2px 2px;
+    padding: 2px 4px;
   }
 
   & .predictor-badge__static_or_dynamic {
@@ -50,7 +50,7 @@ $low-score-colour__text: #485b10;
 
     background-color: #E5E6E7;
 
-    padding: 2px 2px;
+    padding: 2px 4px;
   }
 
   & .predictor-badge__wrapped_static_or_dynamic {
